force-app/main/default/objects/Engagement_Client_Subject__c/Engagement_Client_Subject__c.object-meta.xml
<CustomObject>
    <description>JUNCTION OBJECT: Custom object to track additional clients and subjects for an engagement.</description>
    <label>Engagement Client/Subject</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Clients/Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>