force-app/main/default/objects/Engagement_Client_Subject__c/fields/ClientKeyCreditorLink__c.field-meta.xml
<CustomField>
    <fullName>ClientKeyCreditorLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a &quot;Client&quot; record is created then a process creates a Key Creditor record for that client and this field is use to link the two.  This field is only used on FR Engagements when the job type is &quot;Credit Advisors and wasn&apos;t created from an Opportunity, prior to conversion.</description>
    <label>Client/Key Creditor Link</label>
    <referenceTo>Engagement_Client_Subject__c</referenceTo>
    <relationshipLabel>Engagement Clients/Subjects (Client/Key Creditor Link)</relationshipLabel>
    <relationshipName>Engagement_Clients_Subjects1</relationshipName>
    <type>Lookup</type>
</CustomField>