force-app/main/default/objects/Engagement_Client_Subject__c/fields/CreditorRevenueAllocationPercentage__c.field-meta.xml
<CustomField>
    <fullName>CreditorRevenueAllocationPercentage__c</fullName>
    <inlineHelpText>FR LOB - enter creditor revenue allocation percentage here.</inlineHelpText>
    <label>Revenue Allocation %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>