force-app/main/default/objects/Engagement_Client_Subject__c/fields/Debt_Structure__c.field-meta.xml
<CustomField>
    <fullName>Debt_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field to relate all Client Subjects that are of type &quot;Lender&quot;. This will feed into Credit Facilities in Engagement Summary</inlineHelpText>
    <label>Debt Structure</label>
    <referenceTo>Debt_Structure__c</referenceTo>
    <relationshipName>Engagement_Clients_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>