force-app/main/default/objects/Engagement_Client_Subject__c/fields/DebtPercentage__c.field-meta.xml
<CustomField>
    <fullName>DebtPercentage__c</fullName>
    <formula>IF(
NOT(ISBLANK(DebtHoldingsMM__c)) &amp;&amp;
DebtHoldingsMM__c &gt; 0,
(DebtHoldingsMM__c/Engagement__r.Total_Debt_MM__c),
0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Split of Key Creditor&apos; total debt holdings (i.e. for each Key Creditor = across any debt instruments in the capital structure / total holdings of clients across all debt tranches)</inlineHelpText>
    <label>Debt Holdings % Total Debt</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>