force-app/main/default/objects/Engagement_Client_Subject__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <description>Engagement&apos;s Job Type. This field is used in the Client/Subject process Builder.</description>
    <formula>TEXT(Engagement__r.Job_Type__c)</formula>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>