force-app/main/default/objects/Engagement_Client_Subject__c/fields/Legacy_SLX_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SLX Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>