force-app/main/default/objects/Engagement_Client_Subject__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount (MM)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>