force-app/main/default/objects/Engagement_Client_Subject__c/fields/Other_Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Other_Related_Object_Id__c</fullName>
    <description>Use to store the indirect relationship to another object based on the &apos;type&apos; field.</description>
    <label>Other Related Object Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>