force-app/main/default/objects/Engagement_Client_Subject__c/fields/Percent_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Percent_Ownership__c</fullName>
    <label>Percent Ownership</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>