force-app/main/default/objects/Engagement_Client_Subject__c/fields/Primary_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Primary_REPORTING__c</fullName>
    <formula>IF( Primary__c, &apos;True&apos;, &apos;False&apos;)</formula>
    <label>Primary (REPORTING)</label>
    <type>Text</type>
</CustomField>