force-app/main/default/objects/Engagement_Client_Subject__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Key Creditor: (i) creditor-side HL client, (ii) AHG member, (iii) other creditor with meaningful negotiation with the debtor, or (iv) lender holding &gt;10% of total debt or &gt;$50m</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Contra</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Equity Holder</fullName>
            </value>
            <value>
                <fullName>Key Creditor</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PE Firm</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>