force-app/main/default/objects/Engagement_Client_Subject__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(Id, &quot;View Details&quot;,&quot;_parent&quot;)</formula>
    <label>View Details</label>
    <type>Text</type>
</CustomField>