force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Additional_Other.recordType-meta.xml
<RecordType>
    <fullName>Additional_Other</fullName>
    <active>true</active>
    <description>Non-FR &quot;Other&quot; Type</description>
    <label>zzzAdditional Other</label>
</RecordType>