force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Contra.recordType-meta.xml
<RecordType>
    <fullName>Contra</fullName>
    <active>true</active>
    <label>Contra</label>
</RecordType>