force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Counterparty.recordType-meta.xml
<RecordType>
    <fullName>Counterparty</fullName>
    <active>true</active>
    <label>Counterparty</label>
</RecordType>