force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/EngClientSubject.recordType-meta.xml
<RecordType>
    <fullName>EngClientSubject</fullName>
    <active>true</active>
    <label>EngClientSubject</label>
</RecordType>