force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/EngClientSubject_Other.recordType-meta.xml
<RecordType>
    <fullName>EngClientSubject_Other</fullName>
    <active>true</active>
    <label>EngClientSubject Other</label>
</RecordType>