force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Equity_Holder.recordType-meta.xml
<RecordType>
    <fullName>Equity_Holder</fullName>
    <active>true</active>
    <label>Equity Holder</label>
</RecordType>