force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Fee_Attribution_Party.recordType-meta.xml
<RecordType>
    <fullName>Fee_Attribution_Party</fullName>
    <active>true</active>
    <label>Fee Attribution Party</label>
</RecordType>