force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Key_Creditor.recordType-meta.xml
<RecordType>
    <fullName>Key_Creditor</fullName>
    <active>true</active>
    <label>Key Creditor</label>
</RecordType>