force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/PE_Firm.recordType-meta.xml
<RecordType>
    <fullName>PE_Firm</fullName>
    <active>true</active>
    <label>PE Firm</label>
</RecordType>