force-app/main/default/objects/Engagement_Client_Subject__c/recordTypes/Subject.recordType-meta.xml
<RecordType>
    <fullName>Subject</fullName>
    <active>true</active>
    <label>Subject</label>
</RecordType>