force-app/main/default/objects/Engagement_Client_Subject__c/validationRules/Primary_Cannot_Change_Type_Eng.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Cannot_Change_Type_Eng</fullName>
    <active>true</active>
    <description>Primary Client/Subject Cannot change Type</description>
    <errorConditionFormula>ISCHANGED( Type__c ) &amp;&amp; Primary__c</errorConditionFormula>
    <errorMessage>Primary Client/Subjects cannot change Type.</errorMessage>
</ValidationRule>